--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.6",
     "react-toastify": "^9.0.8",
+    "socket.io-client": "^4.5.3",
     "swiper": "^8.3.2",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
