--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.27.2",
     "dotenv": "^16.0.3",
     "firebase": "^9.9.3",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-countdown": "^2.3.4",
     "react-dom": "^18.2.0",
@@ -24,7 +25,8 @@
     "socket.io-client": "^4.5.3",
     "swiper": "^8.3.2",
     "uuid": "^9.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
