--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^16.0.3",
     "firebase": "^9.9.3",
     "formik": "^2.2.9",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-countdown": "^2.3.4",
     "react-dom": "^18.2.0",
@@ -22,6 +23,7 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.6",
     "react-toastify": "^9.0.8",
+    "recharts": "^2.3.2",
     "socket.io-client": "^4.5.3",
     "swiper": "^8.3.2",
     "uuid": "^9.0.0",
