--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "dotenv": "^16.0.3",
+    "ethers": "^6.6.4",
     "firebase": "^9.9.3",
     "formik": "^2.2.9",
     "moment": "^2.29.4",
